// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/get-dates-for-time-period returns correct dates for all 1`] = `
Array [
  2017-08-15T00:00:00.000Z,
  2017-08-16T00:00:00.000Z,
  2017-08-17T00:00:00.000Z,
  2017-08-18T00:00:00.000Z,
  2017-08-19T00:00:00.000Z,
  2017-08-20T00:00:00.000Z,
  2017-08-21T00:00:00.000Z,
  2017-08-22T00:00:00.000Z,
  2017-08-23T00:00:00.000Z,
  2017-08-24T00:00:00.000Z,
  2017-08-25T00:00:00.000Z,
  2017-08-26T00:00:00.000Z,
  2017-08-27T00:00:00.000Z,
  2017-08-28T00:00:00.000Z,
  2017-08-29T00:00:00.000Z,
  2017-08-30T00:00:00.000Z,
  2017-08-31T00:00:00.000Z,
  2017-09-01T00:00:00.000Z,
  2017-09-02T00:00:00.000Z,
  2017-09-03T00:00:00.000Z,
  2017-09-04T00:00:00.000Z,
  2017-09-05T00:00:00.000Z,
  2017-09-06T00:00:00.000Z,
  2017-09-07T00:00:00.000Z,
  2017-09-08T00:00:00.000Z,
  2017-09-09T00:00:00.000Z,
  2017-09-10T00:00:00.000Z,
  2017-09-11T00:00:00.000Z,
  2017-09-12T00:00:00.000Z,
  2017-09-13T00:00:00.000Z,
  2017-09-14T00:00:00.000Z,
  2017-09-15T00:00:00.000Z,
  2017-09-16T00:00:00.000Z,
  2017-09-17T00:00:00.000Z,
  2017-09-18T00:00:00.000Z,
  2017-09-19T00:00:00.000Z,
  2017-09-20T00:00:00.000Z,
  2017-09-21T00:00:00.000Z,
  2017-09-22T00:00:00.000Z,
  2017-09-23T00:00:00.000Z,
  2017-09-24T00:00:00.000Z,
  2017-09-25T00:00:00.000Z,
  2017-09-26T00:00:00.000Z,
  2017-09-27T00:00:00.000Z,
  2017-09-28T00:00:00.000Z,
  2017-09-29T00:00:00.000Z,
  2017-09-30T00:00:00.000Z,
  2017-10-01T00:00:00.000Z,
  2017-10-02T00:00:00.000Z,
  2017-10-03T00:00:00.000Z,
  2017-10-04T00:00:00.000Z,
  2017-10-05T00:00:00.000Z,
  2017-10-06T00:00:00.000Z,
  2017-10-07T00:00:00.000Z,
  2017-10-08T00:00:00.000Z,
  2017-10-09T00:00:00.000Z,
  2017-10-10T00:00:00.000Z,
  2017-10-11T00:00:00.000Z,
  2017-10-12T00:00:00.000Z,
  2017-10-13T00:00:00.000Z,
  2017-10-14T00:00:00.000Z,
  2017-10-15T00:00:00.000Z,
  2017-10-16T00:00:00.000Z,
  2017-10-17T00:00:00.000Z,
  2017-10-18T00:00:00.000Z,
  2017-10-19T00:00:00.000Z,
  2017-10-20T00:00:00.000Z,
  2017-10-21T00:00:00.000Z,
  2017-10-22T00:00:00.000Z,
  2017-10-23T00:00:00.000Z,
  2017-10-24T00:00:00.000Z,
  2017-10-25T00:00:00.000Z,
  2017-10-26T00:00:00.000Z,
  2017-10-27T00:00:00.000Z,
  2017-10-28T00:00:00.000Z,
  2017-10-29T00:00:00.000Z,
  2017-10-30T00:00:00.000Z,
  2017-10-31T00:00:00.000Z,
  2017-11-01T00:00:00.000Z,
  2017-11-02T00:00:00.000Z,
  2017-11-03T00:00:00.000Z,
  2017-11-04T00:00:00.000Z,
  2017-11-05T00:00:00.000Z,
  2017-11-06T00:00:00.000Z,
  2017-11-07T00:00:00.000Z,
  2017-11-08T00:00:00.000Z,
  2017-11-09T00:00:00.000Z,
  2017-11-10T00:00:00.000Z,
  2017-11-11T00:00:00.000Z,
  2017-11-12T00:00:00.000Z,
  2017-11-13T00:00:00.000Z,
  2017-11-14T00:00:00.000Z,
  2017-11-15T00:00:00.000Z,
  2017-11-16T00:00:00.000Z,
  2017-11-17T00:00:00.000Z,
  2017-11-18T00:00:00.000Z,
  2017-11-19T00:00:00.000Z,
  2017-11-20T00:00:00.000Z,
  2017-11-21T00:00:00.000Z,
  2017-11-22T00:00:00.000Z,
  2017-11-23T00:00:00.000Z,
  2017-11-24T00:00:00.000Z,
  2017-11-25T00:00:00.000Z,
  2017-11-26T00:00:00.000Z,
  2017-11-27T00:00:00.000Z,
  2017-11-28T00:00:00.000Z,
  2017-11-29T00:00:00.000Z,
  2017-11-30T00:00:00.000Z,
  2017-12-01T00:00:00.000Z,
  2017-12-02T00:00:00.000Z,
  2017-12-03T00:00:00.000Z,
  2017-12-04T00:00:00.000Z,
  2017-12-05T00:00:00.000Z,
  2017-12-06T00:00:00.000Z,
  2017-12-07T00:00:00.000Z,
  2017-12-08T00:00:00.000Z,
  2017-12-09T00:00:00.000Z,
  2017-12-10T00:00:00.000Z,
  2017-12-11T00:00:00.000Z,
  2017-12-12T00:00:00.000Z,
  2017-12-13T00:00:00.000Z,
  2017-12-14T00:00:00.000Z,
  2017-12-15T00:00:00.000Z,
  2017-12-16T00:00:00.000Z,
  2017-12-17T00:00:00.000Z,
  2017-12-18T00:00:00.000Z,
  2017-12-19T00:00:00.000Z,
  2017-12-20T00:00:00.000Z,
  2017-12-21T00:00:00.000Z,
  2017-12-22T00:00:00.000Z,
  2017-12-23T00:00:00.000Z,
  2017-12-24T00:00:00.000Z,
  2017-12-25T00:00:00.000Z,
  2017-12-26T00:00:00.000Z,
  2017-12-27T00:00:00.000Z,
  2017-12-28T00:00:00.000Z,
  2017-12-29T00:00:00.000Z,
  2017-12-30T00:00:00.000Z,
  2017-12-31T00:00:00.000Z,
  2018-01-01T00:00:00.000Z,
  2018-01-02T00:00:00.000Z,
  2018-01-03T00:00:00.000Z,
  2018-01-04T00:00:00.000Z,
  2018-01-05T00:00:00.000Z,
  2018-01-06T00:00:00.000Z,
  2018-01-07T00:00:00.000Z,
  2018-01-08T00:00:00.000Z,
  2018-01-09T00:00:00.000Z,
  2018-01-10T00:00:00.000Z,
  2018-01-11T00:00:00.000Z,
  2018-01-12T00:00:00.000Z,
  2018-01-13T00:00:00.000Z,
  2018-01-14T00:00:00.000Z,
  2018-01-15T00:00:00.000Z,
  2018-01-16T00:00:00.000Z,
  2018-01-17T00:00:00.000Z,
  2018-01-18T00:00:00.000Z,
  2018-01-19T00:00:00.000Z,
  2018-01-20T00:00:00.000Z,
  2018-01-21T00:00:00.000Z,
  2018-01-22T00:00:00.000Z,
  2018-01-23T00:00:00.000Z,
  2018-01-24T00:00:00.000Z,
  2018-01-25T00:00:00.000Z,
  2018-01-26T00:00:00.000Z,
  2018-01-27T00:00:00.000Z,
  2018-01-28T00:00:00.000Z,
  2018-01-29T00:00:00.000Z,
  2018-01-30T00:00:00.000Z,
  2018-01-31T00:00:00.000Z,
  2018-02-01T00:00:00.000Z,
  2018-02-02T00:00:00.000Z,
  2018-02-03T00:00:00.000Z,
  2018-02-04T00:00:00.000Z,
  2018-02-05T00:00:00.000Z,
  2018-02-06T00:00:00.000Z,
  2018-02-07T00:00:00.000Z,
]
`;

exports[`util/get-dates-for-time-period returns correct dates for day 1`] = `
Array [
  2018-02-07T00:00:00.000Z,
  2018-02-07T00:30:00.000Z,
  2018-02-07T01:00:00.000Z,
  2018-02-07T01:30:00.000Z,
  2018-02-07T02:00:00.000Z,
  2018-02-07T02:30:00.000Z,
  2018-02-07T03:00:00.000Z,
  2018-02-07T03:30:00.000Z,
  2018-02-07T04:00:00.000Z,
  2018-02-07T04:30:00.000Z,
  2018-02-07T05:00:00.000Z,
  2018-02-07T05:30:00.000Z,
  2018-02-07T06:00:00.000Z,
  2018-02-07T06:30:00.000Z,
  2018-02-07T07:00:00.000Z,
  2018-02-07T07:30:00.000Z,
  2018-02-07T08:00:00.000Z,
  2018-02-07T08:30:00.000Z,
  2018-02-07T09:00:00.000Z,
  2018-02-07T09:30:00.000Z,
  2018-02-07T10:00:00.000Z,
  2018-02-07T10:30:00.000Z,
  2018-02-07T11:00:00.000Z,
  2018-02-07T11:30:00.000Z,
  2018-02-07T12:00:00.000Z,
  2018-02-07T12:30:00.000Z,
  2018-02-07T13:00:00.000Z,
  2018-02-07T13:30:00.000Z,
  2018-02-07T14:00:00.000Z,
  2018-02-07T14:30:00.000Z,
  2018-02-07T15:00:00.000Z,
  2018-02-07T15:30:00.000Z,
  2018-02-07T16:00:00.000Z,
  2018-02-07T16:30:00.000Z,
  2018-02-07T17:00:00.000Z,
  2018-02-07T17:30:00.000Z,
  2018-02-07T18:00:00.000Z,
  2018-02-07T18:30:00.000Z,
  2018-02-07T19:00:00.000Z,
  2018-02-07T19:30:00.000Z,
  2018-02-07T20:00:00.000Z,
  2018-02-07T20:30:00.000Z,
  2018-02-07T21:00:00.000Z,
  2018-02-07T21:30:00.000Z,
  2018-02-07T22:00:00.000Z,
  2018-02-07T22:30:00.000Z,
  2018-02-07T23:00:00.000Z,
  2018-02-07T23:30:00.000Z,
]
`;

exports[`util/get-dates-for-time-period returns correct dates for month 1`] = `
Array [
  2018-01-08T00:00:00.000Z,
  2018-01-09T00:00:00.000Z,
  2018-01-10T00:00:00.000Z,
  2018-01-11T00:00:00.000Z,
  2018-01-12T00:00:00.000Z,
  2018-01-13T00:00:00.000Z,
  2018-01-14T00:00:00.000Z,
  2018-01-15T00:00:00.000Z,
  2018-01-16T00:00:00.000Z,
  2018-01-17T00:00:00.000Z,
  2018-01-18T00:00:00.000Z,
  2018-01-19T00:00:00.000Z,
  2018-01-20T00:00:00.000Z,
  2018-01-21T00:00:00.000Z,
  2018-01-22T00:00:00.000Z,
  2018-01-23T00:00:00.000Z,
  2018-01-24T00:00:00.000Z,
  2018-01-25T00:00:00.000Z,
  2018-01-26T00:00:00.000Z,
  2018-01-27T00:00:00.000Z,
  2018-01-28T00:00:00.000Z,
  2018-01-29T00:00:00.000Z,
  2018-01-30T00:00:00.000Z,
  2018-01-31T00:00:00.000Z,
  2018-02-01T00:00:00.000Z,
  2018-02-02T00:00:00.000Z,
  2018-02-03T00:00:00.000Z,
  2018-02-04T00:00:00.000Z,
  2018-02-05T00:00:00.000Z,
  2018-02-06T00:00:00.000Z,
  2018-02-07T00:00:00.000Z,
]
`;

exports[`util/get-dates-for-time-period returns correct dates for week 1`] = `
Array [
  2018-02-01T00:00:00.000Z,
  2018-02-01T01:00:00.000Z,
  2018-02-01T02:00:00.000Z,
  2018-02-01T03:00:00.000Z,
  2018-02-01T04:00:00.000Z,
  2018-02-01T05:00:00.000Z,
  2018-02-01T06:00:00.000Z,
  2018-02-01T07:00:00.000Z,
  2018-02-01T08:00:00.000Z,
  2018-02-01T09:00:00.000Z,
  2018-02-01T10:00:00.000Z,
  2018-02-01T11:00:00.000Z,
  2018-02-01T12:00:00.000Z,
  2018-02-01T13:00:00.000Z,
  2018-02-01T14:00:00.000Z,
  2018-02-01T15:00:00.000Z,
  2018-02-01T16:00:00.000Z,
  2018-02-01T17:00:00.000Z,
  2018-02-01T18:00:00.000Z,
  2018-02-01T19:00:00.000Z,
  2018-02-01T20:00:00.000Z,
  2018-02-01T21:00:00.000Z,
  2018-02-01T22:00:00.000Z,
  2018-02-01T23:00:00.000Z,
  2018-02-02T00:00:00.000Z,
  2018-02-02T01:00:00.000Z,
  2018-02-02T02:00:00.000Z,
  2018-02-02T03:00:00.000Z,
  2018-02-02T04:00:00.000Z,
  2018-02-02T05:00:00.000Z,
  2018-02-02T06:00:00.000Z,
  2018-02-02T07:00:00.000Z,
  2018-02-02T08:00:00.000Z,
  2018-02-02T09:00:00.000Z,
  2018-02-02T10:00:00.000Z,
  2018-02-02T11:00:00.000Z,
  2018-02-02T12:00:00.000Z,
  2018-02-02T13:00:00.000Z,
  2018-02-02T14:00:00.000Z,
  2018-02-02T15:00:00.000Z,
  2018-02-02T16:00:00.000Z,
  2018-02-02T17:00:00.000Z,
  2018-02-02T18:00:00.000Z,
  2018-02-02T19:00:00.000Z,
  2018-02-02T20:00:00.000Z,
  2018-02-02T21:00:00.000Z,
  2018-02-02T22:00:00.000Z,
  2018-02-02T23:00:00.000Z,
  2018-02-03T00:00:00.000Z,
  2018-02-03T01:00:00.000Z,
  2018-02-03T02:00:00.000Z,
  2018-02-03T03:00:00.000Z,
  2018-02-03T04:00:00.000Z,
  2018-02-03T05:00:00.000Z,
  2018-02-03T06:00:00.000Z,
  2018-02-03T07:00:00.000Z,
  2018-02-03T08:00:00.000Z,
  2018-02-03T09:00:00.000Z,
  2018-02-03T10:00:00.000Z,
  2018-02-03T11:00:00.000Z,
  2018-02-03T12:00:00.000Z,
  2018-02-03T13:00:00.000Z,
  2018-02-03T14:00:00.000Z,
  2018-02-03T15:00:00.000Z,
  2018-02-03T16:00:00.000Z,
  2018-02-03T17:00:00.000Z,
  2018-02-03T18:00:00.000Z,
  2018-02-03T19:00:00.000Z,
  2018-02-03T20:00:00.000Z,
  2018-02-03T21:00:00.000Z,
  2018-02-03T22:00:00.000Z,
  2018-02-03T23:00:00.000Z,
  2018-02-04T00:00:00.000Z,
  2018-02-04T01:00:00.000Z,
  2018-02-04T02:00:00.000Z,
  2018-02-04T03:00:00.000Z,
  2018-02-04T04:00:00.000Z,
  2018-02-04T05:00:00.000Z,
  2018-02-04T06:00:00.000Z,
  2018-02-04T07:00:00.000Z,
  2018-02-04T08:00:00.000Z,
  2018-02-04T09:00:00.000Z,
  2018-02-04T10:00:00.000Z,
  2018-02-04T11:00:00.000Z,
  2018-02-04T12:00:00.000Z,
  2018-02-04T13:00:00.000Z,
  2018-02-04T14:00:00.000Z,
  2018-02-04T15:00:00.000Z,
  2018-02-04T16:00:00.000Z,
  2018-02-04T17:00:00.000Z,
  2018-02-04T18:00:00.000Z,
  2018-02-04T19:00:00.000Z,
  2018-02-04T20:00:00.000Z,
  2018-02-04T21:00:00.000Z,
  2018-02-04T22:00:00.000Z,
  2018-02-04T23:00:00.000Z,
  2018-02-05T00:00:00.000Z,
  2018-02-05T01:00:00.000Z,
  2018-02-05T02:00:00.000Z,
  2018-02-05T03:00:00.000Z,
  2018-02-05T04:00:00.000Z,
  2018-02-05T05:00:00.000Z,
  2018-02-05T06:00:00.000Z,
  2018-02-05T07:00:00.000Z,
  2018-02-05T08:00:00.000Z,
  2018-02-05T09:00:00.000Z,
  2018-02-05T10:00:00.000Z,
  2018-02-05T11:00:00.000Z,
  2018-02-05T12:00:00.000Z,
  2018-02-05T13:00:00.000Z,
  2018-02-05T14:00:00.000Z,
  2018-02-05T15:00:00.000Z,
  2018-02-05T16:00:00.000Z,
  2018-02-05T17:00:00.000Z,
  2018-02-05T18:00:00.000Z,
  2018-02-05T19:00:00.000Z,
  2018-02-05T20:00:00.000Z,
  2018-02-05T21:00:00.000Z,
  2018-02-05T22:00:00.000Z,
  2018-02-05T23:00:00.000Z,
  2018-02-06T00:00:00.000Z,
  2018-02-06T01:00:00.000Z,
  2018-02-06T02:00:00.000Z,
  2018-02-06T03:00:00.000Z,
  2018-02-06T04:00:00.000Z,
  2018-02-06T05:00:00.000Z,
  2018-02-06T06:00:00.000Z,
  2018-02-06T07:00:00.000Z,
  2018-02-06T08:00:00.000Z,
  2018-02-06T09:00:00.000Z,
  2018-02-06T10:00:00.000Z,
  2018-02-06T11:00:00.000Z,
  2018-02-06T12:00:00.000Z,
  2018-02-06T13:00:00.000Z,
  2018-02-06T14:00:00.000Z,
  2018-02-06T15:00:00.000Z,
  2018-02-06T16:00:00.000Z,
  2018-02-06T17:00:00.000Z,
  2018-02-06T18:00:00.000Z,
  2018-02-06T19:00:00.000Z,
  2018-02-06T20:00:00.000Z,
  2018-02-06T21:00:00.000Z,
  2018-02-06T22:00:00.000Z,
  2018-02-06T23:00:00.000Z,
  2018-02-07T00:00:00.000Z,
  2018-02-07T01:00:00.000Z,
  2018-02-07T02:00:00.000Z,
  2018-02-07T03:00:00.000Z,
  2018-02-07T04:00:00.000Z,
  2018-02-07T05:00:00.000Z,
  2018-02-07T06:00:00.000Z,
  2018-02-07T07:00:00.000Z,
  2018-02-07T08:00:00.000Z,
  2018-02-07T09:00:00.000Z,
  2018-02-07T10:00:00.000Z,
  2018-02-07T11:00:00.000Z,
  2018-02-07T12:00:00.000Z,
  2018-02-07T13:00:00.000Z,
  2018-02-07T14:00:00.000Z,
  2018-02-07T15:00:00.000Z,
  2018-02-07T16:00:00.000Z,
  2018-02-07T17:00:00.000Z,
  2018-02-07T18:00:00.000Z,
  2018-02-07T19:00:00.000Z,
  2018-02-07T20:00:00.000Z,
  2018-02-07T21:00:00.000Z,
  2018-02-07T22:00:00.000Z,
  2018-02-07T23:00:00.000Z,
]
`;

exports[`util/get-dates-for-time-period returns correct dates for year 1`] = `
Array [
  2017-02-08T00:00:00.000Z,
  2017-02-09T00:00:00.000Z,
  2017-02-10T00:00:00.000Z,
  2017-02-11T00:00:00.000Z,
  2017-02-12T00:00:00.000Z,
  2017-02-13T00:00:00.000Z,
  2017-02-14T00:00:00.000Z,
  2017-02-15T00:00:00.000Z,
  2017-02-16T00:00:00.000Z,
  2017-02-17T00:00:00.000Z,
  2017-02-18T00:00:00.000Z,
  2017-02-19T00:00:00.000Z,
  2017-02-20T00:00:00.000Z,
  2017-02-21T00:00:00.000Z,
  2017-02-22T00:00:00.000Z,
  2017-02-23T00:00:00.000Z,
  2017-02-24T00:00:00.000Z,
  2017-02-25T00:00:00.000Z,
  2017-02-26T00:00:00.000Z,
  2017-02-27T00:00:00.000Z,
  2017-02-28T00:00:00.000Z,
  2017-03-01T00:00:00.000Z,
  2017-03-02T00:00:00.000Z,
  2017-03-03T00:00:00.000Z,
  2017-03-04T00:00:00.000Z,
  2017-03-05T00:00:00.000Z,
  2017-03-06T00:00:00.000Z,
  2017-03-07T00:00:00.000Z,
  2017-03-08T00:00:00.000Z,
  2017-03-09T00:00:00.000Z,
  2017-03-10T00:00:00.000Z,
  2017-03-11T00:00:00.000Z,
  2017-03-12T00:00:00.000Z,
  2017-03-13T00:00:00.000Z,
  2017-03-14T00:00:00.000Z,
  2017-03-15T00:00:00.000Z,
  2017-03-16T00:00:00.000Z,
  2017-03-17T00:00:00.000Z,
  2017-03-18T00:00:00.000Z,
  2017-03-19T00:00:00.000Z,
  2017-03-20T00:00:00.000Z,
  2017-03-21T00:00:00.000Z,
  2017-03-22T00:00:00.000Z,
  2017-03-23T00:00:00.000Z,
  2017-03-24T00:00:00.000Z,
  2017-03-25T00:00:00.000Z,
  2017-03-26T00:00:00.000Z,
  2017-03-27T00:00:00.000Z,
  2017-03-28T00:00:00.000Z,
  2017-03-29T00:00:00.000Z,
  2017-03-30T00:00:00.000Z,
  2017-03-31T00:00:00.000Z,
  2017-04-01T00:00:00.000Z,
  2017-04-02T00:00:00.000Z,
  2017-04-03T00:00:00.000Z,
  2017-04-04T00:00:00.000Z,
  2017-04-05T00:00:00.000Z,
  2017-04-06T00:00:00.000Z,
  2017-04-07T00:00:00.000Z,
  2017-04-08T00:00:00.000Z,
  2017-04-09T00:00:00.000Z,
  2017-04-10T00:00:00.000Z,
  2017-04-11T00:00:00.000Z,
  2017-04-12T00:00:00.000Z,
  2017-04-13T00:00:00.000Z,
  2017-04-14T00:00:00.000Z,
  2017-04-15T00:00:00.000Z,
  2017-04-16T00:00:00.000Z,
  2017-04-17T00:00:00.000Z,
  2017-04-18T00:00:00.000Z,
  2017-04-19T00:00:00.000Z,
  2017-04-20T00:00:00.000Z,
  2017-04-21T00:00:00.000Z,
  2017-04-22T00:00:00.000Z,
  2017-04-23T00:00:00.000Z,
  2017-04-24T00:00:00.000Z,
  2017-04-25T00:00:00.000Z,
  2017-04-26T00:00:00.000Z,
  2017-04-27T00:00:00.000Z,
  2017-04-28T00:00:00.000Z,
  2017-04-29T00:00:00.000Z,
  2017-04-30T00:00:00.000Z,
  2017-05-01T00:00:00.000Z,
  2017-05-02T00:00:00.000Z,
  2017-05-03T00:00:00.000Z,
  2017-05-04T00:00:00.000Z,
  2017-05-05T00:00:00.000Z,
  2017-05-06T00:00:00.000Z,
  2017-05-07T00:00:00.000Z,
  2017-05-08T00:00:00.000Z,
  2017-05-09T00:00:00.000Z,
  2017-05-10T00:00:00.000Z,
  2017-05-11T00:00:00.000Z,
  2017-05-12T00:00:00.000Z,
  2017-05-13T00:00:00.000Z,
  2017-05-14T00:00:00.000Z,
  2017-05-15T00:00:00.000Z,
  2017-05-16T00:00:00.000Z,
  2017-05-17T00:00:00.000Z,
  2017-05-18T00:00:00.000Z,
  2017-05-19T00:00:00.000Z,
  2017-05-20T00:00:00.000Z,
  2017-05-21T00:00:00.000Z,
  2017-05-22T00:00:00.000Z,
  2017-05-23T00:00:00.000Z,
  2017-05-24T00:00:00.000Z,
  2017-05-25T00:00:00.000Z,
  2017-05-26T00:00:00.000Z,
  2017-05-27T00:00:00.000Z,
  2017-05-28T00:00:00.000Z,
  2017-05-29T00:00:00.000Z,
  2017-05-30T00:00:00.000Z,
  2017-05-31T00:00:00.000Z,
  2017-06-01T00:00:00.000Z,
  2017-06-02T00:00:00.000Z,
  2017-06-03T00:00:00.000Z,
  2017-06-04T00:00:00.000Z,
  2017-06-05T00:00:00.000Z,
  2017-06-06T00:00:00.000Z,
  2017-06-07T00:00:00.000Z,
  2017-06-08T00:00:00.000Z,
  2017-06-09T00:00:00.000Z,
  2017-06-10T00:00:00.000Z,
  2017-06-11T00:00:00.000Z,
  2017-06-12T00:00:00.000Z,
  2017-06-13T00:00:00.000Z,
  2017-06-14T00:00:00.000Z,
  2017-06-15T00:00:00.000Z,
  2017-06-16T00:00:00.000Z,
  2017-06-17T00:00:00.000Z,
  2017-06-18T00:00:00.000Z,
  2017-06-19T00:00:00.000Z,
  2017-06-20T00:00:00.000Z,
  2017-06-21T00:00:00.000Z,
  2017-06-22T00:00:00.000Z,
  2017-06-23T00:00:00.000Z,
  2017-06-24T00:00:00.000Z,
  2017-06-25T00:00:00.000Z,
  2017-06-26T00:00:00.000Z,
  2017-06-27T00:00:00.000Z,
  2017-06-28T00:00:00.000Z,
  2017-06-29T00:00:00.000Z,
  2017-06-30T00:00:00.000Z,
  2017-07-01T00:00:00.000Z,
  2017-07-02T00:00:00.000Z,
  2017-07-03T00:00:00.000Z,
  2017-07-04T00:00:00.000Z,
  2017-07-05T00:00:00.000Z,
  2017-07-06T00:00:00.000Z,
  2017-07-07T00:00:00.000Z,
  2017-07-08T00:00:00.000Z,
  2017-07-09T00:00:00.000Z,
  2017-07-10T00:00:00.000Z,
  2017-07-11T00:00:00.000Z,
  2017-07-12T00:00:00.000Z,
  2017-07-13T00:00:00.000Z,
  2017-07-14T00:00:00.000Z,
  2017-07-15T00:00:00.000Z,
  2017-07-16T00:00:00.000Z,
  2017-07-17T00:00:00.000Z,
  2017-07-18T00:00:00.000Z,
  2017-07-19T00:00:00.000Z,
  2017-07-20T00:00:00.000Z,
  2017-07-21T00:00:00.000Z,
  2017-07-22T00:00:00.000Z,
  2017-07-23T00:00:00.000Z,
  2017-07-24T00:00:00.000Z,
  2017-07-25T00:00:00.000Z,
  2017-07-26T00:00:00.000Z,
  2017-07-27T00:00:00.000Z,
  2017-07-28T00:00:00.000Z,
  2017-07-29T00:00:00.000Z,
  2017-07-30T00:00:00.000Z,
  2017-07-31T00:00:00.000Z,
  2017-08-01T00:00:00.000Z,
  2017-08-02T00:00:00.000Z,
  2017-08-03T00:00:00.000Z,
  2017-08-04T00:00:00.000Z,
  2017-08-05T00:00:00.000Z,
  2017-08-06T00:00:00.000Z,
  2017-08-07T00:00:00.000Z,
  2017-08-08T00:00:00.000Z,
  2017-08-09T00:00:00.000Z,
  2017-08-10T00:00:00.000Z,
  2017-08-11T00:00:00.000Z,
  2017-08-12T00:00:00.000Z,
  2017-08-13T00:00:00.000Z,
  2017-08-14T00:00:00.000Z,
  2017-08-15T00:00:00.000Z,
  2017-08-16T00:00:00.000Z,
  2017-08-17T00:00:00.000Z,
  2017-08-18T00:00:00.000Z,
  2017-08-19T00:00:00.000Z,
  2017-08-20T00:00:00.000Z,
  2017-08-21T00:00:00.000Z,
  2017-08-22T00:00:00.000Z,
  2017-08-23T00:00:00.000Z,
  2017-08-24T00:00:00.000Z,
  2017-08-25T00:00:00.000Z,
  2017-08-26T00:00:00.000Z,
  2017-08-27T00:00:00.000Z,
  2017-08-28T00:00:00.000Z,
  2017-08-29T00:00:00.000Z,
  2017-08-30T00:00:00.000Z,
  2017-08-31T00:00:00.000Z,
  2017-09-01T00:00:00.000Z,
  2017-09-02T00:00:00.000Z,
  2017-09-03T00:00:00.000Z,
  2017-09-04T00:00:00.000Z,
  2017-09-05T00:00:00.000Z,
  2017-09-06T00:00:00.000Z,
  2017-09-07T00:00:00.000Z,
  2017-09-08T00:00:00.000Z,
  2017-09-09T00:00:00.000Z,
  2017-09-10T00:00:00.000Z,
  2017-09-11T00:00:00.000Z,
  2017-09-12T00:00:00.000Z,
  2017-09-13T00:00:00.000Z,
  2017-09-14T00:00:00.000Z,
  2017-09-15T00:00:00.000Z,
  2017-09-16T00:00:00.000Z,
  2017-09-17T00:00:00.000Z,
  2017-09-18T00:00:00.000Z,
  2017-09-19T00:00:00.000Z,
  2017-09-20T00:00:00.000Z,
  2017-09-21T00:00:00.000Z,
  2017-09-22T00:00:00.000Z,
  2017-09-23T00:00:00.000Z,
  2017-09-24T00:00:00.000Z,
  2017-09-25T00:00:00.000Z,
  2017-09-26T00:00:00.000Z,
  2017-09-27T00:00:00.000Z,
  2017-09-28T00:00:00.000Z,
  2017-09-29T00:00:00.000Z,
  2017-09-30T00:00:00.000Z,
  2017-10-01T00:00:00.000Z,
  2017-10-02T00:00:00.000Z,
  2017-10-03T00:00:00.000Z,
  2017-10-04T00:00:00.000Z,
  2017-10-05T00:00:00.000Z,
  2017-10-06T00:00:00.000Z,
  2017-10-07T00:00:00.000Z,
  2017-10-08T00:00:00.000Z,
  2017-10-09T00:00:00.000Z,
  2017-10-10T00:00:00.000Z,
  2017-10-11T00:00:00.000Z,
  2017-10-12T00:00:00.000Z,
  2017-10-13T00:00:00.000Z,
  2017-10-14T00:00:00.000Z,
  2017-10-15T00:00:00.000Z,
  2017-10-16T00:00:00.000Z,
  2017-10-17T00:00:00.000Z,
  2017-10-18T00:00:00.000Z,
  2017-10-19T00:00:00.000Z,
  2017-10-20T00:00:00.000Z,
  2017-10-21T00:00:00.000Z,
  2017-10-22T00:00:00.000Z,
  2017-10-23T00:00:00.000Z,
  2017-10-24T00:00:00.000Z,
  2017-10-25T00:00:00.000Z,
  2017-10-26T00:00:00.000Z,
  2017-10-27T00:00:00.000Z,
  2017-10-28T00:00:00.000Z,
  2017-10-29T00:00:00.000Z,
  2017-10-30T00:00:00.000Z,
  2017-10-31T00:00:00.000Z,
  2017-11-01T00:00:00.000Z,
  2017-11-02T00:00:00.000Z,
  2017-11-03T00:00:00.000Z,
  2017-11-04T00:00:00.000Z,
  2017-11-05T00:00:00.000Z,
  2017-11-06T00:00:00.000Z,
  2017-11-07T00:00:00.000Z,
  2017-11-08T00:00:00.000Z,
  2017-11-09T00:00:00.000Z,
  2017-11-10T00:00:00.000Z,
  2017-11-11T00:00:00.000Z,
  2017-11-12T00:00:00.000Z,
  2017-11-13T00:00:00.000Z,
  2017-11-14T00:00:00.000Z,
  2017-11-15T00:00:00.000Z,
  2017-11-16T00:00:00.000Z,
  2017-11-17T00:00:00.000Z,
  2017-11-18T00:00:00.000Z,
  2017-11-19T00:00:00.000Z,
  2017-11-20T00:00:00.000Z,
  2017-11-21T00:00:00.000Z,
  2017-11-22T00:00:00.000Z,
  2017-11-23T00:00:00.000Z,
  2017-11-24T00:00:00.000Z,
  2017-11-25T00:00:00.000Z,
  2017-11-26T00:00:00.000Z,
  2017-11-27T00:00:00.000Z,
  2017-11-28T00:00:00.000Z,
  2017-11-29T00:00:00.000Z,
  2017-11-30T00:00:00.000Z,
  2017-12-01T00:00:00.000Z,
  2017-12-02T00:00:00.000Z,
  2017-12-03T00:00:00.000Z,
  2017-12-04T00:00:00.000Z,
  2017-12-05T00:00:00.000Z,
  2017-12-06T00:00:00.000Z,
  2017-12-07T00:00:00.000Z,
  2017-12-08T00:00:00.000Z,
  2017-12-09T00:00:00.000Z,
  2017-12-10T00:00:00.000Z,
  2017-12-11T00:00:00.000Z,
  2017-12-12T00:00:00.000Z,
  2017-12-13T00:00:00.000Z,
  2017-12-14T00:00:00.000Z,
  2017-12-15T00:00:00.000Z,
  2017-12-16T00:00:00.000Z,
  2017-12-17T00:00:00.000Z,
  2017-12-18T00:00:00.000Z,
  2017-12-19T00:00:00.000Z,
  2017-12-20T00:00:00.000Z,
  2017-12-21T00:00:00.000Z,
  2017-12-22T00:00:00.000Z,
  2017-12-23T00:00:00.000Z,
  2017-12-24T00:00:00.000Z,
  2017-12-25T00:00:00.000Z,
  2017-12-26T00:00:00.000Z,
  2017-12-27T00:00:00.000Z,
  2017-12-28T00:00:00.000Z,
  2017-12-29T00:00:00.000Z,
  2017-12-30T00:00:00.000Z,
  2017-12-31T00:00:00.000Z,
  2018-01-01T00:00:00.000Z,
  2018-01-02T00:00:00.000Z,
  2018-01-03T00:00:00.000Z,
  2018-01-04T00:00:00.000Z,
  2018-01-05T00:00:00.000Z,
  2018-01-06T00:00:00.000Z,
  2018-01-07T00:00:00.000Z,
  2018-01-08T00:00:00.000Z,
  2018-01-09T00:00:00.000Z,
  2018-01-10T00:00:00.000Z,
  2018-01-11T00:00:00.000Z,
  2018-01-12T00:00:00.000Z,
  2018-01-13T00:00:00.000Z,
  2018-01-14T00:00:00.000Z,
  2018-01-15T00:00:00.000Z,
  2018-01-16T00:00:00.000Z,
  2018-01-17T00:00:00.000Z,
  2018-01-18T00:00:00.000Z,
  2018-01-19T00:00:00.000Z,
  2018-01-20T00:00:00.000Z,
  2018-01-21T00:00:00.000Z,
  2018-01-22T00:00:00.000Z,
  2018-01-23T00:00:00.000Z,
  2018-01-24T00:00:00.000Z,
  2018-01-25T00:00:00.000Z,
  2018-01-26T00:00:00.000Z,
  2018-01-27T00:00:00.000Z,
  2018-01-28T00:00:00.000Z,
  2018-01-29T00:00:00.000Z,
  2018-01-30T00:00:00.000Z,
  2018-01-31T00:00:00.000Z,
  2018-02-01T00:00:00.000Z,
  2018-02-02T00:00:00.000Z,
  2018-02-03T00:00:00.000Z,
  2018-02-04T00:00:00.000Z,
  2018-02-05T00:00:00.000Z,
  2018-02-06T00:00:00.000Z,
  2018-02-07T00:00:00.000Z,
]
`;
